# ksplang

./: AGENTS.md  Cargo.toml  LICENSE  README.md  ksplang_en.md  rustfmt.toml
.github/workflows/: release.yml  test.yml
benches/: funkcia_bench.rs  program_bench.rs
benches/programs/: aoc24-1-1.ksplang  aoc24-1-2.ksplang  aoc24-1-short.in  aoc24-1.in  aoc24-2-1.ksplang  aoc24-2-short.in  aoc24-3-1.ksplang  aoc24-3-2.ksplang  aoc24-3-short.in  aoc24-3.in  aoc24-4-1.ksplang  aoc24-4-2.ksplang  aoc24-4-short.in  aoc24-4.in  aoc24-5-1.ksplang  aoc24-5-2.ksplang  aoc24-5-short.in  aoc24-5.in  aoc24-7-1.ksplang  aoc24-7-short.in  aoc24-7.in
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
fuzz/src/: lib.rs
fuzz/tests/: regression_tests.rs
ksplang-cli/: Cargo.toml
ksplang-cli/src/: main.rs
src/: digit_sum.rs  funkcia.rs  lib.rs  ops.rs  parser.rs  vm.rs
src/compiler/: analyzer.rs  bytecode_interpreter.rs  cfg.rs  cfg_interpreter.rs  cfg_tests.rs  config.rs  mod.rs  ops.rs  opt_hoisting.rs  osmibytecode.rs  osmibytecode_backend.rs  osmibytecode_vm.rs  pattern.rs  precompiler.rs  range_ops.rs  simplifier.rs  simplifier_tests.rs  test_utils.rs  tests.rs  utils.rs  vm_code.rs
src/compiler/tests/: sekvence.ksplang  sort.ksplang  sort100.ksplang
src/vm/: bug_shrinker.rs  tests.rs
