[package]
name = "ksplang"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["ksplang", "interpreter", "esolang"]
description = "A ksplang interpreter"
homepage = "https://ksp.mff.cuni.cz/viz/ksplang"
repository = "https://github.com/ksp/ksplang"
categories = ["compilers"]

[dependencies]
thiserror = "1.0.40"
num-integer = "0.1.46"
num-traits = "0.2.19"
smallvec = { version = "1.15.1", features = ["union", "const_generics", "const_new"] }
arrayvec = "0.7.6"
rustc-hash = "2.1.1"

[workspace]
members = [
	"ksplang-cli",
	"."
]

[lib]
bench = false

[dev-dependencies]
# Criterion is used only for benchmarks
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9.2"

[[bench]]
name = "funkcia_bench"
harness = false

[[bench]]
name = "program_bench"
harness = false
